...
        android:layout_marginTop="@dimen/margin_small"
        android:hint="@string/sdk_card_number_hint"
        android:tag="@string/sdk_card_number_hint"
        android:theme="@style/TextLabelHint">

        <vn.com.zalopay.wallet.view.custom.VPaymentDrawableEditText
            android:id="@+id/edittext_localcard_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/txt_bottom_default_style"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="number"
            android:longClickable="false"
...
