...
                        android:hint="@string/sdk_otp_hint"
                        android:tag="@string/sdk_otp_hint"
                        android:theme="@style/TextLabelHint"
                        android:visibility="gone">

                        <vn.com.zalopay.wallet.view.custom.VPaymentDrawableEditText
                            android:id="@+id/zpsdk_otp_ctl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/txt_bottom_default_style"
                            android:imeOptions="actionDone|flagNoExtractUi"
                            android:inputType="number|textNoSuggestions"
                            android:maxLength="@integer/maximum_character_field_opt_length"
...
                            android:hint="@string/sdk_captcha_hint"
                            android:paddingTop="@dimen/zpw_row_padding_top"
                            android:tag="@string/sdk_captcha_hint"
                            android:theme="@style/TextLabelHint">

                            <vn.com.zalopay.wallet.view.custom.VPaymentDrawableEditText
                                android:id="@+id/zpsdk_captchar_ctl"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:background="@drawable/txt_bottom_default_style"
                                android:gravity="center_vertical"
                                android:imeOptions="actionGo|flagNoExtractUi"
...
