<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/buttonPanel"
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:paddingBottom="4dp"
    android:paddingEnd="12dp"
    android:paddingStart="12dp"
    android:paddingTop="4dp">

    <Space
        android:id="@+id/spacer"
        style="?attr/buttonBarNegativeButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="invisible" />

    <Button
        android:id="@+id/cancel_button"
        style="?attr/buttonBarPositiveButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/second_dialog_button"
        style="?attr/buttonBarPositiveButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary" />
</LinearLayout>